--- a/client/poster-client/src/styling/LoginPage.css
+++ b/client/poster-client/src/styling/LoginPage.css
@@ -51,4 +51,16 @@
     width: 200px;
     background-color: #f0f0f0;
   }
-  
+  .signup-redirect {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.signup-link {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.signup-link:hover {
+    text-decoration: underline;
+}
