--- a/client/poster-client/src/styling/HomePage.css
+++ b/client/poster-client/src/styling/HomePage.css
@@ -23,34 +23,6 @@ body {
   padding: 20px;
 }
 
-/* Header container styles */
-.header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-  background-color: #00acee; /* Twitter blue */
-  color: #fff;
-}
-
-/* User info styles */
-.user-info h1 {
-  font-size: 24px;
-  margin: 0;
-}
-
-.user-info p {
-  font-size: 16px;
-  margin: 0;
-}
-
-/* Follower count styles */
-.follower-count p {
-  font-size: 16px;
-  margin: 0;
-}
-
-
 /* Adjustments for smaller screens */
 @media (max-width: 768px) {
   .container {
@@ -66,14 +38,6 @@ body {
   .main-content {
     padding: 20px 0;
   }
-}
-.header-bar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-  background-color: #00acee; /* Twitter blue */
-  color: #fff;
 }
 
 .buttons-container {
@@ -157,4 +121,55 @@ body {
   padding: 10px 20px;
   margin-left: 10px;
   cursor: pointer;
+}
+
+/* HEADER STUFF*/
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #00acee;
+  padding: 20px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.user-header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.avatar-icon {
+  font-size: 3em;
+  margin-right: 10px;
+}
+
+.user-header h1 {
+  font-size: 2em;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+.user-details {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.user-detail {
+  display: flex;
+  align-items: center;
+  margin: 0 20px; /* Adding some margin between details */
+}
+
+.user-detail .icon {
+  margin-right: 5px;
+  color: #555;
+}
+
+.icon {
+  font-size: 1.5em;
 }
