--- a/client/poster-client/src/styling/Post.css
+++ b/client/poster-client/src/styling/Post.css
@@ -4,6 +4,7 @@
   border-radius: 8px;
   padding: 10px;
   margin-bottom: 20px;
+  font-family: 'Nunito', sans-serif;
 }
 
 .post-header {
@@ -13,6 +14,8 @@
 }
 
 .post-username {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700; /* Bold */
   font-weight: bold;
   padding: 5px 10px;
   border-radius: 5px;
@@ -28,11 +31,25 @@
   background-color: #00acee; /* Twitter blue */
   color: white;
   padding: 8px 16px;
+  margin: 5px;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .post-actions .post-reply-button:hover {
+  background-color: #007bb6; /* Darker shade of Twitter blue */
+}
+
+post-actions .post-follow-button {
+  border: none;
+  background-color: #00acee; /* Twitter blue */
+  color: white;
+  padding: 8px 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.post-actions .post-follow-button:hover {
   background-color: #007bb6; /* Darker shade of Twitter blue */
 }
 
