--- a/client/poster-client/src/styling/HomePage.css
+++ b/client/poster-client/src/styling/HomePage.css
@@ -173,3 +173,20 @@ body {
 .icon {
   font-size: 1.5em;
 }
+
+.notification {
+  background-color: yellow;
+  color: black;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  margin: 10px 0;
+  font-size: 1.2em;
+}
+.posts-container {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px; /* Add space between posts */
+}
