--- a/client/poster-client/src/styling/LoginPage.css
+++ b/client/poster-client/src/styling/LoginPage.css
@@ -9,9 +9,9 @@
     flex-grow: 1;
     padding: 40px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 4px 4px 8px rgba(0, 0, 0, 0.1);
     margin: 20px;
-    max-width: 400px; /* Adjust the maximum width as needed */
+    max-width: 400px; 
   }
   
   .login-form-container h2 {
